--- a/src/main/res/layout/ioio.xml
+++ b/src/main/res/layout/ioio.xml
@@ -4,10 +4,10 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 
-    <SurfaceView
-	    android:id="@+id/preview"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" />
+	<org.opencv.android.JavaCameraView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/color_blob_detection_activity_surface_view" />
 
 	<Button
 		android:id="@+id/btnGrid"
